--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express-validator": "^6.14.0",
+    "mongodb": "^4.4.1",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2"
   }
 }
