--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest --verbose --setupFiles=dotenv/config --silent=false"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.0",
+    "dotenv": "^14.3.0",
     "express": "~4.16.1",
     "express-validator": "^6.14.0",
-    "mongodb": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.3.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15",
-    "passport": "^0.5.2"
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "jest": "^27.4.7",
+    "supertest": "^6.2.2"
   }
 }
