--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,3 @@
 MIGRATE=true
-MONGOURI=mongodb+srv://<username>:<password>@cluster0.cpawp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGOURI=mongodb+srv://grupoStreets:seminario2022@cluster0.cpawp.mongodb.net/matriculas?retryWrites=true&w=majority
 API_TOKEN=90a18f68-7b98-4912-bc05-768a82bdb0ae
