--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,4 @@ MIGRATE=true
 MONGOURI=mongodb+srv://grupoStreets:seminario2022@cluster0.cpawp.mongodb.net/matriculas?retryWrites=true&w=majority
 API_TOKEN=90a18f68-7b98-4912-bc05-768a82bdb0ae
 JWT_SECRET=90a18f68-7b98-4912-bc05-768a82bdb0ae
+CORS_ORIGIN=http://localhost:3001
